testdata/baselines/reference/submodule/conformance/jsDeclarationsClassExtendsVisibility.errors.txt
cls.js(7,1): error TS2741: Property 'Strings' is missing in type 'typeof Foo' but required in type 'typeof import("cls")'.


==== cls.js (1 errors) ====
    const Bar = require("./bar");
    const Strings = {
        a: "A",
        b: "B"
    };
    class Foo extends Bar {}
    module.exports = Foo;
    ~~~~~~~~~~~~~~
!!! error TS2741: Property 'Strings' is missing in type 'typeof Foo' but required in type 'typeof import("cls")'.
!!! related TS2728 cls.js:8:1: 'Strings' is declared here.
    module.exports.Strings = Strings;
==== bar.js (0 errors) ====
    class Bar {}
    module.exports = Bar;